force-app/main/default/objects/OPP_BrkgSim__c/OPP_BrkgSim__c.object-meta.xml
<CustomObject>
    <label>Brokerage Simulation</label>
    <nameField>
        <displayFormat>BS-{00000000}</displayFormat>
        <label>Brokerage Simulation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brokerage Simulation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>