force-app/main/default/objects/OPP_BrkgSim__c/fields/LKAdminFeeIntro__c.field-meta.xml
<CustomField>
    <fullName>LKAdminFeeIntro__c</fullName>
    <label>LK Admin Fee to introducing Broker</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>