force-app/main/default/objects/OPP_BrkgSim__c/fields/LKCoBrkg__c.field-meta.xml
<CustomField>
    <fullName>LKCoBrkg__c</fullName>
    <label>LK Co-Brkg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>