force-app/main/default/objects/OPP_BrkgSim__c/fields/LKReBrkg__c.field-meta.xml
<CustomField>
    <fullName>LKReBrkg__c</fullName>
    <label>LK Re Brkg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>