force-app/main/default/objects/OPP_BrkgSim__c/fields/NetToLKPremPct__c.field-meta.xml
<CustomField>
    <fullName>NetToLKPremPct__c</fullName>
    <label>Net to LK Prem (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>