force-app/main/default/objects/OPP_BrkgSim__c/fields/PremCurrency__c.field-meta.xml
<CustomField>
    <fullName>PremCurrency__c</fullName>
    <label>Prem Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COM_Currency</valueSetName>
    </valueSet>
</CustomField>