force-app/main/default/objects/OPP_BrkgSim__c/fields/TotalBrkg__c.field-meta.xml
<CustomField>
    <fullName>TotalBrkg__c</fullName>
    <label>Total Brkg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>