force-app/main/default/objects/OPP_BrkgSim__c/fields/TotalOrderPct__c.field-meta.xml
<CustomField>
    <fullName>TotalOrderPct__c</fullName>
    <label>Total Order (%)</label>
    <precision>18</precision>
    <scale>16</scale>
    <type>Percent</type>
</CustomField>