force-app/main/default/objects/OPP_BrkgSim__c/fields/TPPAdminFeeLK__c.field-meta.xml
<CustomField>
    <fullName>TPPAdminFeeLK__c</fullName>
    <label>TTP Admin Fee to LK</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>